# birdeeSystems

./: .gitignore  .gitmodules  README.md  alacritty.yml  atomic-emodipt.omp.json  build  compinstallOut  configuration.nix  default.nix  flake.nix  home.nix  minesweeper.AppImage  neovim-nightlybirdeevim-x86_64.AppImage  platforms.nix  testout
.github/workflows/: release.yml
common/: default.nix
common/LD/: default.nix
common/birdeevim/: README.md  default.nix  init.lua
common/disko/: default.nix  flake-parts.nix  noswap_bios.nix  vmware_bios.nix  (+2 more)
common/templates/helloC/: .gitignore  CMakeLists.txt
common/templates/helloC/src/: main.cpp
disko/: sda_swap.nix  sdb_swap.nix
firefox/: homeFox.nix  prefs.js
flakeModules/: appImagePerSystem.nix  default.nix  flake-utils.nix  homeCFGperSystem.nix  nixosCFGperSystem.nix
flakes/: testerstart
hardwares/: aSUSrog.nix  nvdintGraphics.nix
homes/: birdee.nix  main.nix  test.nix
i3/: config  default.nix  dunstrc  i3.nix
modules/: default.nix
notes/: bootUpMonitorScript.sh
overlays/: default.nix  dep-tree.nix  pinnedVersions.nix
scripts/: both  build  combined  deleteOld  enableFlake  firstTime  firstTimeUPDATE  home  homeBuild  isoInstaller  isoInstaller2  noUpdateBuild  noUpdateBuild.sh  split  system  systemBuild  vmbuild
shell/: home-bash.nix  home-fish.nix  home-zsh.nix  system-bash.nix  system-fish.nix  system-zsh.nix
systems/: PCs.nix  aSUS.nix  dustbook.nix
templates/: default.nix
userdata/: default.nix
util/: README.md  default.nix  import.nix  lutil.lua  mkLuaOverlay.nix  mkLuaStuff.nix
(+616 files in other folders)
